# rsoundcloud

./: .justfile  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  Makefile  README.md  flake.nix
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: audit.yaml  build.yaml  ci.yaml  publish.yaml
docs/: PROXY_USAGE.md
examples/: custom_client.rs
src/: client.rs  errors.rs  lib.rs
src/api/: me.rs  misc.rs  mod.rs  playlists.rs  search.rs  tracks.rs  users.rs
src/http/: common.rs  mod.rs  reqwest.rs
src/models/: comment.rs  conversation.rs  graphql.rs  history.rs  like.rs  message.rs  mod.rs  playlist.rs  response.rs  stream.rs  track.rs  user.rs  web_profile.rs
src/resources/: base.rs  mod.rs
src/utils/: macros.rs  mod.rs  schemas.rs
tests/: Cargo.toml  test_api_misc.rs  test_api_playlists.rs  test_api_search.rs  test_api_tracks.rs  test_api_users.rs  test_client.rs  test_custom_client.rs
tests/common/: mod.rs
tests/src/: main.rs
tools/: publish.sh
