[package]
name = "rsoundcloud"
description = "A SoundCloud API client"
version = "0.1.0"
authors = [
    "Bartholomé Gili <dev.bartho@gmail.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/barthofu/rsoundcloud"
repository = "https://github.com/barthofu/rsoundcloud"
keywords = ["soundcloud", "api"]
categories = ["api-bindings", "multimedia::audio"]
edition = "2021"

[workspace]
members = [
    "packages/http",
    "packages/models", "tests",
]

[dependencies]
http = { path = "packages/http" }
models = { path = "packages/models" }

reqwest = "0.12.14"
regex = "1.11.1"
thiserror = "2.0.12"
serde_json = "1.0.140"
serde = { version = "1.0.130", default-features = false }
serde_path_to_error = "0.1.17"
url = "2.5.4"
async-stream = { version = "0.3.2" }
async-trait = { version = "0.1.51" }
futures = { version = "0.3.17" }
