[package]
name = "rsoundcloud"
description = "A SoundCloud API client"
version = "0.2.5"
authors = [
    "Bartholomé Gili <dev.bartho@gmail.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/barthofu/rsoundcloud"
repository = "https://github.com/barthofu/rsoundcloud"
keywords = ["soundcloud", "api"]
categories = ["api-bindings", "multimedia::audio"]
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["json", "socks", "rustls-tls", "cookies"] }
regex = "1.11.2"
thiserror = "2.0.16"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.145"
serde_path_to_error = "0.1.19"
url = "2.5.7"
async-stream = { version = "0.3.6" }
async-trait = { version = "0.1.89" }
futures = { version = "0.3.31" }
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
tokio = { version = "1.47.1", default-features = false, features = ["full"] }